--- a/RClip/RClip.csproj
+++ b/RClip/RClip.csproj
@@ -11,4 +11,12 @@
 	<DebugType>embedded</DebugType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RT.CommandLine" Version="2.2.193" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CmdTools\CmdTools.csproj" />
+  </ItemGroup>
+
 </Project>
